se armo la estructura de la página
se organizó cada sección de la pagina

--- a/index.html
+++ b/index.html
@@ -8,6 +8,126 @@
     </title>
 </head>
 <body>
-    
+    <main class="estructura">
+        <header>
+            <nav class="menu">
+                <figure>
+                    <img src="#" alt="logo">
+                </figure>
+                <ul>{
+                    <li>opcion 1</li>
+                    <li>opcion 2</li>
+                    <li>opcion 3</li>
+                    <li>opcion 4</li>
+                    <li>opcion 5</li>
+                </ul>
+            </nav>
+            //recordar que falta el titulo!!
+            <figure class="banner-principal">
+                <img src="#" alt="imagen principal">
+            </figure>
+            <button>icon</button>
+        </header>
+        <section class="platillo-principal">
+            <div class="text">
+                <h2>Our Story</h2>
+                <span>Begins</span>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi eligendi laborum quas doloremque ullam culpa perferendis deleniti accusantium corrupti repellat nesciunt eius magnam, quaerat neque quod aspernatur sunt explicabo quos suscipit facere ipsam iste reiciendis molestiae?</p>
+            </div>
+            <div>
+                <figure>
+                    <img src="#" alt="imagen-del-platillo">
+                </figure>
+            </div>
+        </section>
+        <section class="imagen-overlay">
+            <h3>Signature Recipes</h3>
+            <span>REINVENTED</span>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea suscipit fugiat exercitationem esse ex itaque eos, numquam blanditiis magni doloribus.</p>
+            <figure>
+                <img src="#" alt="imagen-overlay">
+            </figure>
+        </section>
+        <section class="menu-platillos">
+            <h3>The Menus</h3>
+            <span>SPECIALITIES</span>
+            <div class="lista-platillos">
+                <div>
+                    <h4>CURRY-TAMARILLOR</h4>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
+                    <span class="precio">$7.95</span>
+                </div>
+                <div>
+                    <h4>ROASTED STEAK ROULADE</h4>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
+                    <span class="precio">$8.76</span>
+                </div>
+                <div>
+                    <h4>CAMPO LINDO CHICKEN</h4>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
+                    <span class="precio">$7.95</span>
+                </div>
+                <div>
+                    <h4>POULET CORDON BLEU</h4>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
+                    <span class="precio">$7.95</span>
+                </div>
+                <div>
+                    <h4>MAPLE FARM BREAST</h4>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
+                    <span class="precio">$7.95</span>
+                </div>
+                <div>
+                    <h4>FILET DE SALMON</h4>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
+                    <span class="precio">$7.95</span>
+                </div>
+                <div>
+                    <h4>QUAL CHEESE</h4>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
+                    <span class="precio">$7.95</span>
+                </div>
+                <div>
+                    <h4>CONFIT DE CANARD</h4>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
+                    <span class="precio">$7.95</span>
+                </div>
+            </div>
+        </section>
+        <section class="icons-menu">
+            <div>
+                <span>SPECIALITIES</span>
+            </div>
+            <div>
+                <span>appetizites</span>
+            </div>
+            <div>
+                <span>main meals</span>
+            </div>
+            <div>
+                <span>desserts</span>
+            </div>
+            <div>
+                <span>drinks</span>
+            </div>
+            <figure class="imagen-overlay-2">
+                <img src="#" alt="imagen-overlay-2">
+            </figure>
+        </section>
+        <section class="reservation">
+            <div>
+                <figure>
+                    <img src="#" alt="imagen-del-platillo">
+                </figure>
+            </div>
+            <div class="text">
+                <h2>Reservations</h2>
+                <span>BOOK NOW</span>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi eligendi laborum quas doloremque ullam culpa perferendis deleniti accusantium corrupti repellat nesciunt eius magnam, quaerat neque quod aspernatur sunt explicabo quos suscipit facere ipsam iste reiciendis molestiae?</p>
+                <a href="#">GET YOURS</a>
+            </div>
+        </section>
+    </main>
+    <footer> all right reservated</footer>
 </body>
 </html>
