se armó el mobile first a medias
se utilizó scss

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Restaurant
     </title>
 </head>
@@ -12,9 +13,9 @@
         <header>
             <nav class="menu">
                 <figure>
-                    <img src="#" alt="logo">
+                    <img src="/assets/Mesa de trabajo 2@4x-8.png" alt="logo">
                 </figure>
-                <ul>{
+                <ul>
                     <li>opcion 1</li>
                     <li>opcion 2</li>
                     <li>opcion 3</li>
@@ -22,21 +23,21 @@
                     <li>opcion 5</li>
                 </ul>
             </nav>
-            //recordar que falta el titulo!!
+            <!--recordar que falta el titulo!!-->
             <figure class="banner-principal">
-                <img src="#" alt="imagen principal">
+                <img src="/assets/lidye-1Shk_PkNkNw-unsplash.jpg" alt="imagen principal">
             </figure>
-            <button>icon</button>
+            <button><a href="#inicio">Vamos</a></button>
         </header>
-        <section class="platillo-principal">
+        <section class="platillo-principal" id="inicio">
             <div class="text">
                 <h2>Our Story</h2>
                 <span>Begins</span>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi eligendi laborum quas doloremque ullam culpa perferendis deleniti accusantium corrupti repellat nesciunt eius magnam, quaerat neque quod aspernatur sunt explicabo quos suscipit facere ipsam iste reiciendis molestiae?</p>
             </div>
-            <div>
+            <div class="img">
                 <figure>
-                    <img src="#" alt="imagen-del-platillo">
+                    <img src="/assets/lidye-1Shk_PkNkNw-unsplash.jpg" alt="imagen-del-platillo">
                 </figure>
             </div>
         </section>
@@ -45,49 +46,49 @@
             <span>REINVENTED</span>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea suscipit fugiat exercitationem esse ex itaque eos, numquam blanditiis magni doloribus.</p>
             <figure>
-                <img src="#" alt="imagen-overlay">
+                <img src="/assets/lidye-1Shk_PkNkNw-unsplash.jpg" alt="imagen-overlay">
             </figure>
         </section>
         <section class="menu-platillos">
             <h3>The Menus</h3>
             <span>SPECIALITIES</span>
             <div class="lista-platillos">
-                <div>
+                <div class="uno">
                     <h4>CURRY-TAMARILLOR</h4>
                     <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
                     <span class="precio">$7.95</span>
                 </div>
-                <div>
+                <div class="dos">
                     <h4>ROASTED STEAK ROULADE</h4>
                     <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
                     <span class="precio">$8.76</span>
                 </div>
-                <div>
+                <div class="tres">
                     <h4>CAMPO LINDO CHICKEN</h4>
                     <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
                     <span class="precio">$7.95</span>
                 </div>
-                <div>
+                <div class="cuatro">
                     <h4>POULET CORDON BLEU</h4>
                     <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
                     <span class="precio">$7.95</span>
                 </div>
-                <div>
+                <div class="cinco">
                     <h4>MAPLE FARM BREAST</h4>
                     <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
                     <span class="precio">$7.95</span>
                 </div>
-                <div>
+                <div class="seis">
                     <h4>FILET DE SALMON</h4>
                     <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
                     <span class="precio">$7.95</span>
                 </div>
-                <div>
+                <div class="siete">
                     <h4>QUAL CHEESE</h4>
                     <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
                     <span class="precio">$7.95</span>
                 </div>
-                <div>
+                <div class="ochos">
                     <h4>CONFIT DE CANARD</h4>
                     <span>Lorem, ipsum dolor sit amet consectetur adipisicing.</span>
                     <span class="precio">$7.95</span>
@@ -96,7 +97,7 @@
         </section>
         <section class="icons-menu">
             <div>
-                <span>SPECIALITIES</span>
+                <span>specialities</span>
             </div>
             <div>
                 <span>appetizites</span>
@@ -111,20 +112,20 @@
                 <span>drinks</span>
             </div>
             <figure class="imagen-overlay-2">
-                <img src="#" alt="imagen-overlay-2">
+                <img src="/assets/lidye-1Shk_PkNkNw-unsplash.jpg" alt="imagen-overlay-2">
             </figure>
         </section>
         <section class="reservation">
-            <div>
+            <div class="img">
                 <figure>
-                    <img src="#" alt="imagen-del-platillo">
+                    <img src="/assets/lidye-1Shk_PkNkNw-unsplash.jpg" alt="imagen-del-platillo">
                 </figure>
             </div>
             <div class="text">
                 <h2>Reservations</h2>
                 <span>BOOK NOW</span>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi eligendi laborum quas doloremque ullam culpa perferendis deleniti accusantium corrupti repellat nesciunt eius magnam, quaerat neque quod aspernatur sunt explicabo quos suscipit facere ipsam iste reiciendis molestiae?</p>
-                <a href="#">GET YOURS</a>
+                <a href="#inicio">GET YOURS</a>
             </div>
         </section>
     </main>
